--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "prisma": "^3.14.0"
   }
