--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "es6-promise": "^4.2.8",
     "vue": "^3.0.0-beta.1",
+    "vue-expandable-image": "^0.1.0",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1"
   },
